--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -60,7 +60,7 @@
     <a href="session-11-coalescent/index.html">11: The Coalescent</a> 
     <br>    
 
-    <a href="session-12-demography/index.html">12: Demography</a> 
+    <a href="session-12-demography/Fundamentals-12.pdf">12: Demography</a> 
     <br>    
     </p>
 </div>
