--- a/slides/data-html/crano-map-colored.html
+++ b/slides/data-html/crano-map-colored.html
@@ -19,7 +19,7 @@
         initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <style>#map_fd322883bb484400b57a2302ed7f491e {
         position: relative;
-        width: 480.0px;
+        width: 40%;
         height: 100.0%;
         left: 0.0%;
         top: 0.0%;
@@ -39,7 +39,7 @@
     var map_fd322883bb484400b57a2302ed7f491e = L.map(
         'map_fd322883bb484400b57a2302ed7f491e', {
         center: [30.5, 100],
-        zoom: 7,
+        zoom: 8,
         maxBounds: bounds,
         layers: [],
         worldCopyJump: false,
@@ -67,7 +67,7 @@
                 [29.0, 99.0],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(90.6%,54.1%,76.5%,1.000)",
+  "color": "#262626", 
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -89,7 +89,7 @@
                 [29.98583333, 100.9097222],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(100.0%,85.1%,18.4%,1.000)",
+  "color": "#262626",
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -111,7 +111,7 @@
                 [30.41916667, 101.5480556],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(100.0%,85.1%,18.4%,1.000)",
+  "color": "#262626", 
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -133,7 +133,7 @@
                 [30.64305556, 101.405],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(100.0%,85.1%,18.4%,1.000)",
+  "color": "#262626",
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -155,7 +155,7 @@
                 [30.59777778, 99.18833333],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(55.3%,62.7%,79.6%,1.000)",
+  "color": "#262626",
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -177,7 +177,7 @@
                 [29.82055556, 100.34638890000001],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(55.3%,62.7%,79.6%,1.000)",
+  "color": "#262626",
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -199,7 +199,7 @@
                 [31.93138889, 98.83166667],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(98.8%,55.3%,38.4%,1.000)",
+  "color": "#262626",
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -221,7 +221,7 @@
                 [30.98166667, 98.96],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(98.8%,55.3%,38.4%,1.000)",
+  "color": "#262626",
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -243,7 +243,7 @@
                 [30.71944444, 99.09138889],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(98.8%,55.3%,38.4%,1.000)",
+  "color": "#262626",
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -265,7 +265,7 @@
                 [30.82805556, 101.28138890000001],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(40.0%,76.1%,64.7%,1.000)",
+  "color": "#262626",
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -287,7 +287,7 @@
                 [31.20138889, 100.8575],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(40.0%,76.1%,64.7%,1.000)",
+  "color": "#262626",
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -309,7 +309,7 @@
                 [31.39277778, 100.6825],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(40.0%,76.1%,64.7%,1.000)",
+  "color": "#262626",
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -331,7 +331,7 @@
                 [31.54472222, 100.46861109999999],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(55.3%,62.7%,79.6%,1.000)",
+  "color": "#262626",
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -353,7 +353,7 @@
                 [31.54972222, 100.1416667],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(55.3%,62.7%,79.6%,1.000)",
+  "color": "#262626",
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
@@ -375,7 +375,7 @@
                 [31.88888889, 99.03],
                 {
   "bubblingMouseEvents": true,
-  "color": "rgba(55.3%,62.7%,79.6%,1.000)",
+  "color": "#262626",
   "dashArray": null,
   "dashOffset": null,
   "fill": true,
