--- a/slides/radcamped/index.html
+++ b/slides/radcamped/index.html
@@ -288,7 +288,7 @@ AABBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB...<br>
   /media/RADCamp/Meek/Meek_barcodes.txt     ## [3] [barcodes_path]: ...
 
   pair3rad                                  ## [7] [datatype]: ...
-  ATCGG, CGATCC                             ## [8] [restriction_overhang]: ...
+  ATCGG, TAGCTT                             ## [8] [restriction_overhang]: ...
 
   1                                         ## [15] [max_barcode_mismatch]: ...
   2                                         ## [16] [filter_adapters]: ...
@@ -313,7 +313,7 @@ AABBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB...<br>
   reference                                 ## [5] [assembly_method]: ...
   reference_file.fa                         ## [6] [reference_sequence]...
   pair3rad                                  ## [7] [datatype]: ...
-  ATCGG, CGATCC                             ## [8] [restriction_overhang]: ...
+  ATCGG, TAGCTT                             ## [8] [restriction_overhang]: ...
 
   1                                         ## [15] [max_barcode_mismatch]: ...
   2                                         ## [16] [filter_adapters]: ...
@@ -338,21 +338,6 @@ AABBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB...<br>
                     </code></pre>
                 </div>
             </section>
-
-
-            <section data-transition="none" class="future">
-                <div class="standard">
-                    <h3> Checking on it while it runs </h3>
-                    <br>
-                    <div class="textbox"><p>
-                        You can disconnect and reconnect as much as you want, this is running in a terminal on the cloud server. The easiest way to check the stats of your run while it is running is to look at the stats files from the file browser in the jupyter server interface. 
-                    </p></div>
-
-                <img src="...">
-
-                </div>
-            </section>
-
 
 
         <!-- SLIDES CLASS ENDING -->
