--- a/slides/2019-Public/index.html
+++ b/slides/2019-Public/index.html
@@ -1068,9 +1068,14 @@
                 <section class="future" data-transition="none">
                     <div class="standard">
                         
-                        <h3> Thanks you </h3>
+                        <h3> Thank you </h3>
 
                         <br><br><br>
+
+                        <a href=https://mybinder.org/v2/gh/genomics-course/f3-tree-thinking.git/master?filepath=notebooks>Tree thinking notebook</a>
+                        <br><br>
+                        <a href=https://mybinder.org/v2/gh/eaton-lab/ipcoal/master?filepath=docs%2Fnotebooks>Simulation notebook</a>
+                        <br><br>
                         <h5>                         
                         *EEEB GU4050,<br> PROGRAMMING AND DATA SCIENCE SKILLS FOR BIOLOGY 3 pts.
 
