--- a/slides/2019-Public/index.html
+++ b/slides/2019-Public/index.html
@@ -351,6 +351,66 @@
 
             </section>
 
+
+            <section class="future" data-transition="none">
+            <section id="notebooks recap" class="future" data-transition="none">
+                <div class="standard">
+                <h3> Python interactive coding exercises </h3>
+                <br>
+                <div class="textbox"><p>
+                Web-based environment for creating and sharing reproducible code. Our example explored <i>tree-thinking</i> and <i>viewing trees as data</i> using the toytree package in <span style="font-weight:400">Python</span>.</p></div>
+                <img src="../data-img/toytree-example.png" style="width:70%">
+                <br>
+
+                <p style="font-size: 0.7em; margin-left: 15%; margin-right: 15%">
+                <a href="https://toytree.readthedocs.io/">https://toytree.readthedocs.io/</a>
+                </p>
+                </div>
+            </section>
+
+
+            <section id="toytree 1" class="future" data-transition="none">
+                <div class="standard">
+                <h3> Tree thinking exercises </h3>
+                <br>
+                <div class="textbox"><p>
+                Reading trees involves interpreting the order in which lineages
+                share common ancestors by tracing relationships backwards from the tips towards the root. <i>Rotating nodes</i> does not affect these relationships, even though the order of the tips changes. 
+                <span style="font-weight:400;color:#5D9B84">Which topology is different?</span>
+                </p></div>
+                <img src="../data-img/toytree-thinking.png" style="width:70%">
+                <br>
+                </div>
+            </section>
+
+
+            <section id="toytree 2" class="future" data-transition="none">
+                <div class="standard">
+                <h3> Trees as data </h3>
+                <br>
+                <div class="textbox"><p>
+                Phylogenetic trees are more than just pictures, they represent a data structure that can be interpreted and used in model-based analyses. Stored in <i>Newick</i> format.
+                </p></div>
+                <img src="../data-img/toytree-newick-exercise-1.png" style="width:70%">
+                <br>
+                </div>
+            </section>    
+
+
+            <section id="toytree 3" class="future" data-transition="none">
+                <div style="margin-left: auto; margin-top: 2%">
+                <h3> Trees as data</h3>
+                <br>
+                <p style="font-size: 0.9em; text-align: left; margin-left: 15%; margin-right: 15%">
+                Phylogenetic trees are more than just pictures, they represent a data structure that can be interpreted and used in model-based analyses. Stored in <i>Newick</i> format. 
+                </p>
+                <img src="../data-img/toytree-newick-exercise-2.png" style="width:70%">
+                <br>
+                </div>
+            </section>
+        
+            </section>
+
             <!-- ============================================================== -->
             <!-- ====  ORGANISMAL  ============================================ -->
             <!-- ============================================================== -->
