--- a/slides/2020-NYBG/index.html
+++ b/slides/2020-NYBG/index.html
@@ -49,7 +49,7 @@
                     Columbia University</i>
                 </h4>
                 </div>
-            </section>            
+            </section>
 
 <!--             <section id="contents" data-transition="none" class="present">
                 <div style="margin-left: auto; margin-top: 5%">
@@ -428,7 +428,21 @@
                     </div>
                     <img src="../data-svg/ipcoal-demo.svg" style="width:90%">
                 </section>
+
+
+                <!-- 21 -->
+                <section class="present" data-transition="none">
+                    <div style="margin-left: auto; margin-top: 5%">    
+                    <h2> Decaying Phylogenomic methods: SNPs</h2>
+                    <img src="../data-svg/consensus-pre-SNP.svg" style="width:55%">
+                    </div>
+                </section>
+
+
             </section>
+
+
+
 
 
             <!-- SIMCAT STUFF -->
@@ -610,7 +624,7 @@
                     <div class="standard">
                         <h4>simcat: machine learning on phylogenetic invariants</h4>
                         <div class="textbox"><p>
-                            Dimensionality reduction (t-SNE) shows how simulations with different admixture edges fall into distinct clusters differentiated by their relative SNP count frequencies and extracted features. Variation in edge lengths and Ne have very litle effect since the informative features are invariants.
+                            Dimensionality reduction (t-SNE) shows how simulations with different admixture edges fall into distinct clusters differentiated by their relative SNP count frequencies and extracted features. Variation in edge lengths and Ne have very little effect since the informative features are invariants.
                         </p></div>
                     </div>
                     <img src="../data-svg/simcat-tsne-imb5-snps10K-11tests-nosis2.svg" style="width:65%">    
@@ -621,7 +635,7 @@
                     <div class="standard">
                         <h4>simcat: machine learning on phylogenetic invariants</h4>
                         <div class="textbox"><p>
-                            Dimensionality reduction (t-SNE) shows how simulations with different admixture edges fall into distinct clusters differentiated by their relative SNP count frequencies and extracted features. Variation in edge lengths and Ne have very litle effect since the informative features are invariants.
+                            Dimensionality reduction (t-SNE) shows how simulations with different admixture edges fall into distinct clusters differentiated by their relative SNP count frequencies and extracted features. Variation in edge lengths and Ne have very little effect since the informative features are invariants.
                         </p></div>
                     </div>
                     <img src="../data-svg/simcat-tsne-imb5-snps10K-11tests-nosis2-ann.svg" style="width:65%">
