--- a/slides/fundamentals/1/index.html
+++ b/slides/fundamentals/1/index.html
@@ -271,17 +271,18 @@
         poorly educated on many shameful applications of evolutionary thinking. 
         Just consider the <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjV6cve29vrAhWIhOAKHVX8DfUQFjAIegQIEBAB&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FIdiocracy&usg=AOvVaw0JqhWZ32uF3uC1Wm17yoGC">
         2006 film "Idiocracy" by Mike Judge</a>, the central concept
-        of which is a classic eugenic trope: that educated people reproduce at lower
-        rates and so the population "degenerates" over time as the descendants 
-        of the poorly educated increase in the population. Fisher wrote on this
+        of which is a classic eugenic trope: that more highly 
+        educated people reproduce at lower rates causing the population to 
+        "degenerates" over time as the descendants of the less educated 
+        increase in the population. Fisher wrote on this
         exact scenario in 1930, arguing for government programs to support the 
         upper class to aid in their fertility. 
         <br>
         <br>
-        This argument isn't made in some obscure publication, it is
+        This argument was not made in some obscure publication, it is
         made in his 
-        book "The Genetical Theory of Natural Selection", <i> one of the 
-        founding texts in evolutionary biology!</i>
+        book "The Genetical Theory of Natural Selection", <i> 
+        one of the founding texts in evolutionary biology.</i> 
                 </p>
                 </div>
                 </section>
